
[metadata]
name = 
version = 0.0.1
author = Santiago Cuevas
author_email = jamescalam94@gmail.com
description = For generating A E S T H E T I C ascii art
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: