
[metadata]
name = cuTradeNet
version = 0.0.1
author = Santiago Cuevas
author_email = san.cuevas@protonmail.com
description = GPU-Accelerated Kinetic Wealth Exchange Models on Complex Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
[options]
packages = find: