
[metadata]
name = cuTradeNet
version = 0.1.0
author = Santiago Cuevas
author_email = san.cuevas@protonmail.com
description = GPU-Accelerated Kinetic Wealth Exchange Models on Complex Networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Qsanti/cuTradeNet
classifiers =
    Programming Language :: Python :: 3
    Environment :: GPU :: NVIDIA CUDA
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
[options]
packages = find:
install_requires=
    numba
    networkx
    igraph